--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,5 +1,8 @@
 # Google Gemini API Configuration
-VITE_GEMINI_API_KEY=Gemini_api_key
+VITE_GEMINI_API_KEY=AIzaSyDfC5dmRTwjkvFzOuawi7mBR2B6hI_Gpuc
+
+# Backend configuration
+VITE_BACKEND_PORT=8000
 
 # Instructions:
 # 1. Get your FREE API key from: https://aistudio.google.com/app/apikey
